# bytebinder

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md
.github/: FUNDING.yml
.github/workflows/: main.yml
include/: bytebinder.h  init_system.h  macros.h  mem.h  memory_exceptions.h  pattern.h  pch.h  scoped_unlock.h  trampoline.h
src/: mem.cpp  memory_exceptions.cpp  pattern.cpp  scoped_unlock.cpp
tests/: tests.cpp
